@@ -316,16 +316,17 @@ shortest_path(PG_FUNCTION_ARGS)
 	Datum *values;
 	char* nulls;
 
-	values = palloc(3 * sizeof(Datum));
-	nulls = palloc(3 * sizeof(char));
+	values = palloc(4 * sizeof(Datum));
+	nulls = palloc(4 * sizeof(char));
 
-
-	values[0] = Int32GetDatum(path[call_cntr].vertex_id);
+	values[0] = Int32GetDatum(call_cntr);
 	nulls[0] = ' ';
-	values[1] = Int32GetDatum(path[call_cntr].edge_id);
+	values[1] = Int32GetDatum(path[call_cntr].vertex_id);
 	nulls[1] = ' ';
-	values[2] = Float8GetDatum(path[call_cntr].cost);
+	values[2] = Int32GetDatum(path[call_cntr].edge_id);
 	nulls[2] = ' ';
+	values[3] = Float8GetDatum(path[call_cntr].cost);
+	nulls[3] = ' ';
 
 	tuple = heap_formtuple(tuple_desc, values, nulls);
 
